Modified to Junit5 testfx